--- a/source/index.html
+++ b/source/index.html
@@ -207,21 +207,15 @@
               <div class="calculator__step-one step-one">
                 <h3 class="step-one__title">Шаг 1. Цель кредита</h3>
                 <div class="step-one__wrapper">
-                  <select class="step-one__select">
-                    <option class="step-one__select-item step-one__select-item--page" selected>Выберите цель кредита</option>
-                    <option class="step-one__select-item">Ипотечное кредитование</option>
-                    <option class="step-one__select-item">Автомобильное кредитование</option>
-                    <option class="step-one__select-item">Потребительский кредит</option>
+                  <select class="step-one__select" placeholder="Выберите цель кредита">
+                    <option class="step-one__select-item" value="">Выберите цель кредита</option>
+                    <option class="step-one__select-item" value="1">Ипотечное кредитование</option>
+                    <option class="step-one__select-item" value="2">Автомобильное кредитование</option>
+                    <option class="step-one__select-item" value="3">Потребительский кредит</option>
                   </select>
-                  <!-- <svg class="step-one__select-item-svg step-one__select-item-svg--top" width="18" height="11">
-                    <use xlink:href="img/sprite.svg#arrow-top"></use>
-                  </svg>
-                  <svg class="step-one__select-item-svg step-one__select-item-svg--bottom" width="18" height="11">
-                    <use xlink:href="img/sprite.svg#arrow-bottom"></use>
-                  </svg> -->
                 </div>
               </div>
-              <!-- <div class="calculator__step-two step-two">
+              <div class="calculator__step-two step-two">
                 <h3 class="step-two__title">Шаг 2. Введите параметры кредита</h3>
                 <ul class="step-two__list list-step-two">
                   <li class="list-step-two__item">
@@ -231,7 +225,7 @@
                     </h4>
                     <div class="list-step-two__item-wrapper">
                       <div class="list-step-two__item-input-wrapper">
-                        <input class="list-step-two__item-input" type="number" min="1200000" max="25000000" value="2 000 000" aria-label="Стоимость">
+                        <input class="list-step-two__item-input" step="100000" type="number" min="1200000" max="25000000" value="2 000 000" aria-label="Стоимость">
                         <span class="list-step-two__item-input-text">рублей</span>
                       </div>
                       <button class="list-step-two__item-btn-minus" type="button">
@@ -303,7 +297,7 @@
                   <span class="list-step-two__checkbox-indicator"></span>
                   <span class="list-step-two__text-additional">Использовать материнский капитал</span>
                 </label>
-              </div> -->
+              </div>
             </div>
             <div class="calculator__wrapper-our-offer">
               <div class="calculator__our-offer our-offer">
@@ -311,26 +305,17 @@
                 <ul class="our-offer__list list-offers">
                   <li class="list-offers__item">
                     <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--one">
-                      <span class="list-offers__item-text-pay list-offers__item-text-pay--js"></span>
+                      <span class="list-offers__item-text-pay list-offers__item-text-pay--js">1 330 000</span>
                       <span class="list-offers__item-text-type">рублей</span>
                     </div>
                     <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--two">
-                      <span class="list-offers__item-text-amount">Сумма</span>
-                      <span class="list-offers__item-text-amount-type list-offers__item-text-amount-type--js">ипотеки</span>
+                      <span class="list-offers__item-text list-offers__item-text-amount">Сумма</span>
+                      <span class="list-offers__item-text list-offers__item-text-amount-type list-offers__item-text-amount-type--js">ипотеки</span>
                     </div>
                   </li>
                   <li class="list-offers__item">
                     <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--one">
-                      <span class="list-offers__item-text-percent list-offers__item-text-percent--js"></span>
-                      <span class="list-offers__item-text-type">%</span>
-                    </div>
-                    <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--two">
-                      <span class="list-offers__item-text">Процентная ставка</span>
-                    </div>
-                  </li>
-                  <li class="list-offers__item">
-                    <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--one">
-                      <span class="list-offers__item-text-pay-month list-offers__item-text-pay-month--js"></span>
+                      <span class="list-offers__item-text-pay-month list-offers__item-text-pay-month--js">27 868</span>
                       <span class="list-offers__item-text-type">рублей</span>
                     </div>
                     <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--two">
@@ -339,14 +324,23 @@
                   </li>
                   <li class="list-offers__item">
                     <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--one">
-                      <span class="list-offers__item-text-income-month list-offers__item-text-income-month--js"></span>
+                      <span class="list-offers__item-text-percent list-offers__item-text-percent--js">9,40</span>
+                      <span class="list-offers__item-text-type">%</span>
+                    </div>
+                    <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--two">
+                      <span class="list-offers__item-text">Процентная ставка</span>
+                    </div>
+                  </li>
+                  <li class="list-offers__item">
+                    <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--one">
+                      <span class="list-offers__item-text-income-month list-offers__item-text-income-month--js">61 929</span>
                       <span class="list-offers__item-text-type">рублей</span>
                     </div>
                     <div class="list-offers__item-wrapper-text list-offers__item-wrapper-text--two">
                       <span class="list-offers__item-text">Необходимый доход</span>
                     </div>
                   </li>
-                </div>
+                </ul>
                 <button class="our-offer__btn" type="button">Оформить заявку</button>
               </div>
             </div>
